--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
 
             <ul id="portfolio-navbar-pills" class="nav nav-pills">
                 <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Home</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">About</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">Experience</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">Education</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">Projects</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">Skills</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">Highlights</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
+                <li class="nav-item"><a href="#portfolio-about" class="nav-link">About</a></li>
+                <li class="nav-item"><a href="#portfolio-experience" class="nav-link">Experience</a></li>
+                <li class="nav-item"><a href="#portfolio-education" class="nav-link">Education</a></li>
+                <li class="nav-item"><a href="#portfolio-projects" class="nav-link">Projects</a></li>
+                <li class="nav-item"><a href="#portfolio-skills" class="nav-link">Skills</a></li>
+                <li class="nav-item"><a href="#portfolio-highlights" class="nav-link">Highlights</a></li>
+                <li class="nav-item"><a href="#portfolio-contact" class="nav-link">Contact</a></li>
             </ul>
             <ul id="portfolio-sidebar-toggle" class="nav nav-pills">
                 <button type="button" class="portfolio-sidebar-toggle-button btn btn-outline-primary"><i
@@ -674,7 +674,7 @@
     </footer>
     <!-- End footer -->
 
-
+   
     <!-- Float Button -->
     <!-- <a href="#" id="portfolio-float" class="float">
         <i id="portfolio-my-float" class="fas fa-arrow-up my-float"></i>
@@ -691,7 +691,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
     -->
-    <script src="js/index.js"></script>
+    <script src="js/app.js"></script>
 </body>
 
 </html>
