--- a/index.html
+++ b/index.html
@@ -140,9 +140,9 @@
                         <button type="button"
                             class="portfolio-hero-highlight portfolio-hero-button btn btn-primary btn-lg">Contact
                             Me</button>
-                        <button type="button"
+                        <a type="button" href="myresume.pdf" target="_blank"
                             class="portfolio-hero-highlight portfolio-hero-button btn btn-outline-secondary btn-lg">See
-                            My Resume</button>
+                            My Resume</a>
                     </div>
                 </div>
             </div>
