safari button css

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                         <button type="button"
                             class="portfolio-hero-highlight portfolio-hero-button btn btn-primary btn-lg">Contact
                             Me</button>
-                        <a type="button" href="myresume.pdf" target="_blank"
+                        <a type="button" style="-webkit-appearance: none;" href="myresume.pdf" target="_blank"
                             class="portfolio-hero-highlight portfolio-hero-button btn btn-outline-secondary btn-lg">See
                             My Resume</a>
                     </div>
