--- a/index.html
+++ b/index.html
@@ -438,8 +438,8 @@
                                 <li>✅ Web App built using NodeJs, ReactJS & MongoDB.</li>
                                 <li>✅ Created a hybrid model to detect cyber bully in text, images and infographics
                                     using CNN for text & KMeans Clustering for image.</li>
+                                <li>✅ Used Twitter, Youtube, Facebook Data for Training Model.</li>
                                 <li>✅ Used Google vision API to extract text from infographic.</li>
-                                <li>✅ Built the RestFul APIs which can be triggered from our android app.</li>
                             </ul>
                             </p>
                             <p style="text-align: right;"><a target="_blank" style="color:black !important" href="https://github.com/SparshJain2000/cyber-bully-detection"><i style="color:black !important" class="fab fa-github"></i> View on Github</a></p>
