--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
                     <div class="col-md-9">
                         <div class="card-body">
                             <h4 class="card-title"><a target="_blank" href="https://robovitics.in/">Robovitics</a> -
-                                Official Robotocs Club of VIT</h4>
+                                Official Robotics Club of VIT</h4>
                             <h5 class="card-subtitle">Core-Committee Member</h5>
                             <h5 class="card-subtitle">2018 - 2020</h5>
                             <p class="card-text">
