--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                             target="_blank"><i class="portfolio-hero-highlight fab fa-telegram"
                                 aria-hidden="true"></i></a>&nbsp;
                         <a class="portfolio-hero-social-link" target="_blank"
-                            href="mailto:priyanshuguptacontact@gmail.com" target="_blank"><i
+                            href="mailto:priyanshu.gupta2008@gmail.com" target="_blank"><i
                                 class="portfolio-hero-highlight fas fa-envelope" aria-hidden="true"></i></a>&nbsp;
                     </div>
                     <div class=" gap-2 d-sm-flex justify-content-sm-center">
@@ -772,7 +772,7 @@
                                     class="fa fa-telegram" aria-hidden="true"></i></a>
                         </li>
                         <li>
-                            <a target="_blank" href="mailto:priyanshuguptacontact@gmail.com" target="_blank"><i
+                            <a target="_blank" href="mailto:priyanshu.gupta2008@gmail.com" target="_blank"><i
                                     class="fa fa-envelope" aria-hidden="true"></i></a>
                         </li>
                     </ul>
