--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                             Deployment & Scaling, & Web Security.</b><br>
                         <b>2. Try to relate how core CSE Concepts are actually used and work internally in technologies
                             and applications.</b><br>
-                        <b>3. Cover how to make Real-Time Projects from Development to Deployment to Scaling.</b><br>
+                        <b>3. Talk about how to build Real-Time Projects from Development to Deployment to Scaling.</b><br>
                     </p>
                 </div>
             </div>
@@ -694,7 +694,8 @@
                 2. +1K subscribers on my youtube channel(in 10 months).<br>
                 3. Speaker at Hands on Robotics Workshop on "Introduction to Arduino", Gravitas
                 Tech. Fest 2k19 VIT Vellore. Attended by more than 150 students.<br>
-                4. Made several successful Freelance Projects.<br></b>
+                4. Made several successful Freelance Projects.<br>
+                5. Body Transformation 💪 - from Skinny 59KGs to Healthy & Muscular 72KGs.</b>
         </div>
         <br>
         <br>
