--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                                 class="portfolio-hero-highlight fas fa-envelope" aria-hidden="true"></i></a>&nbsp;
                     </div>
                     <div class=" gap-2 d-sm-flex justify-content-sm-center">
-                        <button type="button"
+                        <button type="button" onclick="location.href='#portfolio-contact'"
                             class="portfolio-hero-highlight portfolio-hero-button btn btn-primary btn-lg">Contact
                             Me</button>
                         <a type="button" style="-webkit-appearance: none;" href="myresume.pdf" target="_blank"
