--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
                                 <li>8.80 CGPA</li>
                             </ul>
                             </p>
-                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                            <p class="card-text"><small class="text-muted"></small></p>
                         </div>
                     </div>
                 </div>
