sidebar close right

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             </svg>
             <span class="fs-4">Sidebar</span>
         </a> -->
-        <div style="display: flex; "><button type="button" onclick="closeSidebar()" class="btn-close btn-close-white"
+        <div style="display: flex; margin-left:auto;"><button type="button" onclick="closeSidebar()" class="btn-close btn-close-white"
                 aria-label="Close"></button></div>
 
         <hr>
