--- a/index.html
+++ b/index.html
@@ -758,7 +758,7 @@
     </div>
 
     <!-- Footer -->
-    <footer>
+    <footer class="footer-section">
         <div id="portfolio-footer" class="container">
             <div class="row">
                 <div class="col-sm-5 copyright">
