--- a/index.html
+++ b/index.html
@@ -128,8 +128,7 @@
             <div id="portfolio-container">
                 <h1 class="portfolio-hero-highlight portfolio-hero-heading display-1 fw-bold">PRIYANSHU GUPTA</h1>
                 <div class="">
-                    <p class="portfolio-hero-highlight portfolio-hero-subheading lead mb-4">Software Developer | Content
-                        Creator
+                    <p class="portfolio-hero-highlight portfolio-hero-subheading lead mb-4">Product Developer | System Architect | Mentored over 1000+ people
                     </p>
                     <div id="portfolio-hero-links">
                         <a class="portfolio-hero-social-link" target="_blank" href="https://github.com/priyanshu2015"
@@ -161,9 +160,8 @@
                         <button type="button" onclick="location.href='#portfolio-contact'"
                             class="portfolio-hero-highlight portfolio-hero-button btn btn-primary btn-lg">Contact
                             Me</button>
-                        <a type="button" style="-webkit-appearance: none;" href="myresume.pdf" target="_blank"
-                            class="portfolio-hero-highlight portfolio-hero-button btn btn-outline-secondary btn-lg">See
-                            My Resume</a>
+                        <a type="button" style="-webkit-appearance: none;" href="https://topmate.io/priyanshugupta" target="_blank"
+                            class="portfolio-hero-highlight portfolio-hero-button btn btn-outline-secondary btn-lg">Schedule a 1:1 call with me</a>
                     </div>
                 </div>
             </div>
@@ -235,8 +233,6 @@
 
                     <p>
                         I am <b>Priyanshu Gupta.</b><br>
-                        Currently an undergraduate at
-                        <a target="_blank" href="http://www.vit.ac.in/"><b>VIT, Vellore.</b></a><br>
                         Love to explore how things actually work behind the <s>scenes</s> softwares & applications.<br>
                         I love helping people to level up their skills.<br>
                         Always up for a conversation about new technologies and exciting projects.<br>
@@ -261,6 +257,30 @@
         <br>
         <h2 class="portfolio-heading">Work Experience</h2>
         <div class="portfolio-timeline">
+            <div class="portfolio-experience-card right">
+                <div class="portfolio-experience-card-content" data-date="May 2019 – August 2019">
+                    <img class="company-img" src="assets/images/brine.png" width="50px" />
+                    <h3><a target="_blank" href="https://www.brine.finance">Brine</a></h3>
+                    <h4>Product Engineer</h4>
+                    <p>
+                        <b>🚧 Work in progress!</b><br>
+                    </p>
+                </div>
+            </div>
+            <div class="portfolio-experience-card left">
+                <div class="portfolio-experience-card-content" data-date="May 2019 – August 2019">
+                    <img class="company-img" src="assets/images/krypto.png" width="50px" />
+                    <h3><a target="_blank" href="https://www.letskrypto.com">Krypto</a></h3>
+                    <h4>Product Engineer</h4>
+                    <p>
+                        <b>1. Architected and developed Krypto-Portfolio Feature.</b><br>
+                        <b>2. Worked with dynamic tech stack including Django, Ruby on Rails, Golang, Message Brokers, Redis, MySQL, PostgreSQL, Celery, Docker, Docker Swarm, Shell Scripting, AWS, Firebase etc.</b><br>
+                        <b>3. Worked on other features including Alerts, Push Notifications, etc.</b><br>
+                        <b>4. Used pytest for code testing to cover every edge case possible.</b><br>
+                        <b>5. Designed systems and helped in developing, managing, and scaling distributed systems from ideation to handling high-volume traffic on application.</b>
+                    </p>
+                </div>
+            </div>
             <div class="portfolio-experience-card right">
                 <div class="portfolio-experience-card-content" data-date="May 2019 – August 2019">
                     <img class="company-img" src="assets/images/youtube.png" width="50px" />
@@ -359,7 +379,7 @@
                             <h5 class="card-subtitle">2018 - 2022</h5>
                             <p class="card-text">
                             <ul>
-                                <li>8.77 CGPA</li>
+                                <li>8.89 CGPA</li>
                             </ul>
                             </p>
                             <p class="card-text"><small class="text-muted"></small></p>
@@ -661,6 +681,12 @@
         <div class="container">
             <div id="playlist-container">
                 <iframe class="playlist-iframe" width="360" height="210"
+                        src="https://www.youtube.com/embed/yoggLJv72Ps"
+                        title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+
+                <iframe class="playlist-iframe" width="360" height="210"
                     src="https://www.youtube.com/embed/videoseries?list=PLLz6Bi1mIXhEE3NEaLz3xNn7JHBHNb34I"
                     title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -671,14 +697,15 @@
                     title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe>
-                <iframe class="playlist-iframe" width="360" height="210"
-                    src="https://www.youtube.com/embed/videoseries?list=PLLz6Bi1mIXhHExURT_U9m5eg1UahPLqg_"
-                    title="YouTube video player" frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen></iframe>
 
                 <iframe class="playlist-iframe" width="360" height="210"
-                    src="https://www.youtube.com/embed/videoseries?list=PLLz6Bi1mIXhHKA1Szy2aj9Jbs6nw9fhNY"
+                        src="https://www.youtube.com/embed/videoseries?list=PLLz6Bi1mIXhHKA1Szy2aj9Jbs6nw9fhNY"
+                        title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+
+                <iframe class="playlist-iframe" width="360" height="210"
+                    src="https://www.youtube.com/embed/videoseries?list=PLLz6Bi1mIXhHExURT_U9m5eg1UahPLqg_"
                     title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe>
@@ -710,12 +737,11 @@
         <h2 class="portfolio-heading">Achievements 🏆</h2>
         <div id="portfolio-achievements" class="container">
             <b>
-                1. Mentored and guided 100+ people personally.<br>
-                2. +1K subscribers on my youtube channel(in 10 months).<br>
-                3. Speaker at Hands on Robotics Workshop on "Introduction to Arduino", Gravitas
-                Tech. Fest 2k19 VIT Vellore. Attended by more than 150 students.<br>
+                1. Mentored and guided 1000+ people personally.<br>
+                2. +5K subscribers on my youtube channel.<br>
+                3. Speaker at various tech events.<br>
                 4. Made several successful Freelance Projects.<br>
-                5. Body Transformation 💪 - from Skinny 59KGs to Healthy & Muscular 72KGs.</b>
+            </b>
         </div>
         <br>
         <br>
